; ModuleID = '/home/carl/AnghaBench/scrcpy/app/tests/extr_test_cbuf.c_test_cbuf_full.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/tests/extr_test_cbuf.c_test_cbuf_full.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.int_queue = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_cbuf_full to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_cbuf_full() #0 {
  %1 = alloca %struct.int_queue, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = call i32 @cbuf_init(%struct.int_queue* %1)
  %8 = call i32 @cbuf_is_full(%struct.int_queue* %1)
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %21, %0
  %14 = load i32, i32* %2, align 4
  %15 = icmp slt i32 %14, 32
  br i1 %15, label %16, label %24

16:                                               ; preds = %13
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @cbuf_push(%struct.int_queue* %1, i32 %17)
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @assert(i32 %19)
  br label %21

21:                                               ; preds = %16
  %22 = load i32, i32* %2, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %2, align 4
  br label %13

24:                                               ; preds = %13
  %25 = call i32 @cbuf_push(%struct.int_queue* %1, i32 42)
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = icmp ne i32 %26, 0
  %28 = xor i1 %27, true
  %29 = zext i1 %28 to i32
  %30 = call i32 @assert(i32 %29)
  %31 = call i32 @cbuf_take(%struct.int_queue* %1, i32* %5)
  store i32 %31, i32* %6, align 4
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @assert(i32 %32)
  %34 = call i32 @cbuf_is_full(%struct.int_queue* %1)
  %35 = icmp ne i32 %34, 0
  %36 = xor i1 %35, true
  %37 = zext i1 %36 to i32
  %38 = call i32 @assert(i32 %37)
  ret void
}

declare dso_local i32 @cbuf_init(%struct.int_queue*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @cbuf_is_full(%struct.int_queue*) #1

declare dso_local i32 @cbuf_push(%struct.int_queue*, i32) #1

declare dso_local i32 @cbuf_take(%struct.int_queue*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
